--- a/estils.css
+++ b/estils.css
@@ -184,6 +184,48 @@ body {
   transition: transform 0.5s ease-in-out;
   
 }
+@media (max-width: 768px) {
+    .hero{
+      margin-top: 50px;
+      max-width: 95%;
+      max-height: 40%;
+
+    }
+      
+
+
+    .hero h1{
+      font-size: 2rem;
+      font-weight: bold;
+      color: black;
+      
+    }
+    .hero p{
+      color: white;
+      font-size: 2rem;
+      font-weight: bold;
+      max-width: 85%;
+    }
+
+    .cards{
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+    }
+
+    .submenu{
+      max-width: 70%;
+      display: flex;
+     flex-wrap: wrap;
+    }
+
+    .gato img{
+      max-width: 90%;
+    }
+     
+  }
+
+
 
 /*-----Galeria------*/
 
@@ -314,6 +356,51 @@ wrap;
   margin-top: 0px;
   display: flex;
 }
+
+.botones-último{
+  padding: auto;
+  display: flex;
+  flex-direction: row;
+  gap: 300px;
+  justify-content: space-between;
+  margin-right: 50px;
+  
+  
+}
+
+.boton{
+  padding: 15px 30px;
+  background-color: #34c924;
+  border-radius: 10%;
+  display: flex;
+  
+  
+  
+}
+.boton a{
+  padding: 10%;
+  text-decoration: none;
+  color: black;
+  font-size: 2.2rem;
+  text-decoration: overline underline;
+  cursor: pointer;
+}
+.boton span{
+  font-size: 32px;
+  vertical-align: middle; /* Alinea el icono con el texto */
+  color: #131414;
+  font-optical-sizing: 24;
+  font-weight: 700;
+  fill: 2;
+  color: white;
+}
+
+.boton:hover{
+  background-color: #b4da09;
+  transform: scale(1.1);
+  transition: transform 0.5s ease-in-out, background-color 0.5s ease-in-out;
+}
+
 
 
 
