--- a/estils.css
+++ b/estils.css
@@ -197,7 +197,7 @@ body {
     .hero h1{
       font-size: 2rem;
       font-weight: bold;
-      color: black;
+      color: rgb(242, 241, 241);
       
     }
     .hero p{
