--- a/estils.css
+++ b/estils.css
@@ -13,6 +13,13 @@ body {
 }
 
 
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
 
 .estilos{
     display: flex;
